--- a/templates/activities.html
+++ b/templates/activities.html
@@ -25,29 +25,28 @@
         <!--<ion-item class="item item-divider sorting">-->
             <!--sorted by most urgent and <a href="" ng-click="switchSorting()">shortest</a>-->
         <!--</ion-item>-->
-        <ion-item ng-repeat="activity in activities | orderByPriority | orderBy: ['-urgency', '-duration']"
-                  ng-hide="hide(activity)" href="#/activity/{{activity.$id}}">
-            <span>{{activity.title}}</span>
-            <span class="badge badge-light">{{activity.urgency}}</span>
+        <ion-item ng-repeat="activity in activities | orderByPriority | orderBy: ['-urgent', '-important', 'duration']"
+                  ng-hide="activity.completion.done" href="#/activity/{{activity.$id}}">
+            <span ng-show="activity.important && activity.urgent"><i class='icon ion-fireball'></i></span>
+            <span ng-show="activity.important && !activity.urgent"><i class='icon ion-flame'></i></span>
+            <span ng-show="activity.urgent && !activity.important"><i class='icon ion-ios7-timer'></i></span>
+            <span> {{activity.title}}</span>
             <span class="item-note">{{activity.duration || ""}} min</span>
         </ion-item>
     </ion-list>
 </ion-content>
 
-<div class="tabs tabs-bottom tabs-icon-only tabs-neutral">
-    <a class="tab-item" ng-model="homeFilter" ng-click="homeFilter = !homeFilter" ng-class="{assertive: homeFilter}">
-        <i class="icon ion-home"></i>
-    </a>
-    <a class="tab-item" ng-model="errandFilter" ng-click="errandFilter = !errandFilter" ng-class="{assertive: errandFilter}">
-        <i class="icon ion-bag"></i>
-    </a>
-    <a class="tab-item" ng-model="computerFilter" ng-click="computerFilter = !computerFilter" ng-class="{assertive: computerFilter}">
-        <i class="icon ion-laptop"></i>
-    </a>
-    <a class="tab-item" ng-model="funFilter" ng-click="funFilter = !funFilter" ng-class="{assertive: funFilter, energized: !funFilter}">
-        <i class="icon ion-happy"></i>
-    </a>
-    <!--<a class="tab-item">-->
-    <!--<i class="icon ion-pricetags"></i>-->
+<!--<div class="tabs tabs-bottom tabs-icon-only tabs-neutral">-->
+    <!--<a class="tab-item" ng-model="homeFilter" ng-click="homeFilter = !homeFilter" ng-class="{assertive: homeFilter}">-->
+        <!--<i class="icon ion-home"></i>-->
     <!--</a>-->
-</div>
+    <!--<a class="tab-item" ng-model="errandFilter" ng-click="errandFilter = !errandFilter" ng-class="{assertive: errandFilter}">-->
+        <!--<i class="icon ion-bag"></i>-->
+    <!--</a>-->
+    <!--<a class="tab-item" ng-model="computerFilter" ng-click="computerFilter = !computerFilter" ng-class="{assertive: computerFilter}">-->
+        <!--<i class="icon ion-laptop"></i>-->
+    <!--</a>-->
+    <!--<a class="tab-item" ng-model="funFilter" ng-click="funFilter = !funFilter" ng-class="{assertive: funFilter, energized: !funFilter}">-->
+        <!--<i class="icon ion-happy"></i>-->
+    <!--</a>-->
+<!--</div>-->
