--- a/templates/activity-form.html
+++ b/templates/activity-form.html
@@ -6,11 +6,11 @@
         <button class="button button-clear button-positive" ng-click="formModal.hide()">Cancel</button>
     </ion-header-bar>
     <ion-content>
-        <form ng-submit="addEditActivity()">
+        <form name="activityForm" ng-submit="activityForm.$valid && addEditActivity()" novalidate>
             <div class="list">
                 <label class="item item-input">
-                    <span class="input-label">Activity</span>
-                    <input ng-model="activity.title" type="text" placeholder="Action you want to take">
+                    <span class="input-label" ng-class="{assertive: !activityForm.$valid}">Activity</span>
+                    <input ng-model="activity.title" type="text" placeholder="Action you want to take" required>
                 </label>
 
                 <label class="item item-input">
