--- a/templates/activity.html
+++ b/templates/activity.html
@@ -11,18 +11,18 @@
         <div class="item item-divider">
             {{activity.title}}
         </div>
-        <div class="row">
-            <div class="col col-30">Completed</div> {{activity.completion.done}}
-            <div class="col">
-                <label class="toggle">
-                    <input type="checkbox" ng-model="activity.completion.done" ng-change="saveCompleted()">
-                    <div class="track">
-                        <div class="handle"></div>
-                    </div>
-                </label>
-                <!--<input type="checkbox" ng-model="activity.completed.done" ng-change="saveActivity()">-->
-            </div>
-        </div>
+        <!--<div class="row">-->
+            <!--<div class="col col-30">Completed</div> {{activity.completion.done}}-->
+            <!--<div class="col">-->
+                <!--<label class="toggle">-->
+                    <!--<input type="checkbox" ng-model="activity.completion.done" ng-change="saveCompleted()">-->
+                    <!--<div class="track">-->
+                        <!--<div class="handle"></div>-->
+                    <!--</div>-->
+                <!--</label>-->
+                <!--&lt;!&ndash;<input type="checkbox" ng-model="activity.completed.done" ng-change="saveActivity()">&ndash;&gt;-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="row" ng-show="activity.completion.done">
             <div class="col col-30">By:</div>
             <div class="col">
