--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ ion-nav-view {
     text-decoration: line-through;
 }
 
+
 #activity .badge {
     position: relative; right: 1em !important;
 }
@@ -57,6 +58,9 @@ i {
     padding: 0;
 }
 
-.dateCompleted {
+.dateCompleted, .activityUserDetails {
     font-size: 0.8em;
+    font-weight: normal;
 }
+
+
