--- a/templates/done.html
+++ b/templates/done.html
@@ -28,9 +28,15 @@
             <span class="crossedOut">{{activity.title}}</span>
             <br />
             <span class="dateCompleted">&#10004; {{activity.completion.on | date:'MM/dd/yyyy @ h:mma'}}</span>
-            <span class="doneDetails">{{activity.completion.by}} for
+            <br />
+            <span class="doneDetails">
+                <!--{{activity.completion.by}} for-->
+                <span ng-repeat="(user, bool) in activity.completion.by" ng-show="activity.completion.by[user]">
+                    {{user}}<span ng-hide="$last">and </span>
+                </span>
+                for
                 <span ng-repeat="(user, bool) in activity.owners" ng-show="user">
-                    {{user}}<span ng-hide="$last">, </span>
+                    {{user}}<span ng-hide="$last">and </span>
                 </span>
             </span>
             <span class="badge badge-light">
